--- a/stylesheets/framework.css
+++ b/stylesheets/framework.css
@@ -69,7 +69,7 @@ body {
 }
 
 body {
-  background: #f0f0f0;
+  background: #fff;
   color: black;
   padding: 0;
   margin: 0;
@@ -145,6 +145,15 @@ textarea {
 
 select {
   width: 100%;
+}
+
+.rowheader{
+  margin-top: 80px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  max-width: 80rem;
 }
 
 .row {
@@ -5665,7 +5674,7 @@ meta.foundation-mq-topbar {
   color: #124468;
   padding: 12px 0 12px 0;
   padding-left: 1.42857rem;
-  font-family: "Open Sans",Arial,sans-serif/*{ffDefault}*/;
+  font-family: "tenor sans",Arial,sans-serif/*{ffDefault}*/;
   font-size: 1rem;
   font-weight: normal;
   text-transform: uppercase;
