--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3163,6 +3163,31 @@ body.screenshot {
 	-webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 }
+.biopic{
+	margin-left: auto;
+	margin-right: auto; 
+	text-align: center;
+}
+.intro h3{
+	margin-top:30px;
+	color: #124468;
+}
+.intro a i {
+	width: 40px;
+	height: 40px;
+	-moz-border-radius: 20px;
+	-webkit-border-radius: 20px;
+	border-radius: 20px;
+	background: #124468;
+	color: white;
+	text-align: center;
+	font-size: 1.25rem;
+	line-height: 3rem;
+	margin-bottom: 30px;
+}
+.biotext{
+	text-align: left;
+}
 .modIconText .icon-text-circle i:before {
   margin: 0;
 }
