new black menubar that doesdoesn't change sizes

--- a/stylesheets/framework.css
+++ b/stylesheets/framework.css
@@ -5581,7 +5581,12 @@ meta.foundation-mq-topbar {
   line-height: 7.14286rem;
   font-size: 1.21429rem;
   margin: 0;
+  text-align: center;
 }
+.top-bar .name h1:hover {
+  background: white;
+}
+
 .top-bar .name h1 a, .top-bar .name h2 a, .top-bar .name h3 a, .top-bar .name h4 a, .top-bar .name p a, .top-bar .name span a {
   font-weight: normal;
   color: #999;
@@ -5960,7 +5965,7 @@ meta.foundation-mq-topbar {
   }
   .top-bar-section li:not(.has-form) a:not(.button) {
     padding: 0 1.42857rem;
-    line-height: 7.14286rem;
+    line-height: 60px;
   }
   .top-bar-section li:not(.has-form) a:not(.button):hover {
 
