--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1020,7 +1020,7 @@ box-shadow: 1px 1px 1px 1px #474747;
   transition-duration: 0.2s;
 }
 .contain-to-grid .title-area img, .contain-to-grid .title-area li img, .contain-to-grid .title-area a img {
-  width: 70%;
+  width: 50px;
   -moz-transition-property: all;
   -o-transition-property: all;
   -webkit-transition-property: all;
@@ -4002,8 +4002,14 @@ body {
   .contain-to-grid {
     height: auto;
   }
-  .contain-to-grid .title-area img, .contain-to-grid .title-area li img, .contain-to-grid .title-area a img {
-    width: auto;
+  .contain-to-grid .title-area a img:hover {    
+    width: 50px;
+  }
+  .top-bar .name h1 {
+  	text-align: left;
+  }
+  .top-bar .name h1:hover {
+  	background-color: #333;
   }
   .contain-to-grid .top-bar-section li:not(.has-form) a:not(.button) {
     height: 60px;
