--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -907,13 +907,7 @@ box-shadow: 1px 1px 1px 1px #474747;
 	padding-bottom: 10px;
 }
 .casestudies {
-	background-color: rgba(240, 240, 240, 0.4);
-	width:242px;
-	margin:15px; 
-	height:150px;
-}
-.casestudies:hover {
-	background-color: rgba(240, 240, 240, 0.6);
+	background-color: #999;
 	width:242px;
 	margin:15px; 
 	height:150px;
@@ -963,7 +957,8 @@ box-shadow: 1px 1px 1px 1px #474747;
 }
 
 .contain-to-grid {
-  height: 60px;
+  height: 100px;
+  background:#333;
   -moz-transition-property: all;
   -o-transition-property: all;
   -webkit-transition-property: all;
@@ -972,15 +967,13 @@ box-shadow: 1px 1px 1px 1px #474747;
   -o-transition-duration: 0.2s;
   -webkit-transition-duration: 0.2s;
   transition-duration: 0.2s;
-  background: #333;
 }
 .contain-to-grid .top-bar {
   -moz-transition-duration: 0.2s;
   -o-transition-duration: 0.2s;
   -webkit-transition-duration: 0.2s;
   transition-duration: 0.2s;
-  background:#333;
-  height:60px;
+  background-color: #333;
 }
 .contain-to-grid .top-bar .top-bar-section li:not(.has-form) a:not(.button) {
   -moz-transition-property: all;
@@ -993,7 +986,7 @@ box-shadow: 1px 1px 1px 1px #474747;
   transition-duration: 0.2s;
 }
 .contain-to-grid .top-bar-section li:not(.has-form) a:not(.button) {
-  height: 60px;
+  height: 100px;
 }
 .contain-to-grid .top-bar-section .has-dropdown > a:after {
   -moz-transition-property: all;
@@ -1004,12 +997,11 @@ box-shadow: 1px 1px 1px 1px #474747;
   -o-transition-duration: 0.2s;
   -webkit-transition-duration: 0.2s;
   transition-duration: 0.2s;
-  top: 31px;
-  color:white;
+  top: 3.57143rem;
 }
 .contain-to-grid .title-area, .contain-to-grid .title-area li, .contain-to-grid .title-area a {
-  height: 60px;
-  line-height: 60px;
+  height: 100px;
+  line-height: 100px;
   -moz-transition-property: all;
   -o-transition-property: all;
   -webkit-transition-property: all;
@@ -1020,7 +1012,7 @@ box-shadow: 1px 1px 1px 1px #474747;
   transition-duration: 0.2s;
 }
 .contain-to-grid .title-area img, .contain-to-grid .title-area li img, .contain-to-grid .title-area a img {
-  width: 50px;
+  width: 100%;
   -moz-transition-property: all;
   -o-transition-property: all;
   -webkit-transition-property: all;
@@ -1041,10 +1033,6 @@ box-shadow: 1px 1px 1px 1px #474747;
   -o-transition-duration: 0.2s;
   -webkit-transition-duration: 0.2s;
   transition-duration: 0.2s;
-  background:#333;
-}
-.top-bar-section ul li > a {
-	color:white;
 }
 .f-topbar-fixed.shrink .top-bar .top-bar-section li:not(.has-form) a:not(.button) {
   height: 60px;
@@ -1059,7 +1047,7 @@ box-shadow: 1px 1px 1px 1px #474747;
   transition-duration: 0.2s;
 }
 .f-topbar-fixed.shrink .top-bar .top-bar-section .has-dropdown > a:after {
-  top: 31px;
+  top: 2.14286rem;
 }
 .f-topbar-fixed.shrink .top-bar .top-bar-section .dropdown li:not(.has-form) a:not(.button) {
   height: 60px;
@@ -1068,6 +1056,9 @@ box-shadow: 1px 1px 1px 1px #474747;
 .f-topbar-fixed.shrink .top-bar .title-area, .f-topbar-fixed.shrink .top-bar .title-area li, .f-topbar-fixed.shrink .top-bar .title-area a {
   height: 60px;
   line-height: 60px;
+}
+.f-topbar-fixed.shrink .top-bar .title-area img, .f-topbar-fixed.shrink .top-bar .title-area li img, .f-topbar-fixed.shrink .top-bar .title-area a img {
+  width: 70%;
 }
 
 .contain-to-grid.fullwidth .top-bar {
@@ -3174,11 +3165,7 @@ clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 	text-align: center;
 }
 .bioimg{
-	max-width:250px; 
-	max-height:250px;
-}
-.bioimg:hover{
-	opacity:0.9;
+	max-width: 250px;
 }
 .intro h3{
 	margin-top:30px;
@@ -3195,15 +3182,10 @@ clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 	text-align: center;
 	font-size: 1.25rem;
 	line-height: 3rem;
-	margin: 0 5px 30px 5px;
-}
-.intro a i:hover {
-	background: #5dd6ee;
+	margin: 0px 5px 30px 5px;
 }
 .biotext{
 	text-align: left;
-	margin-left: 15px;
-	margin-right: 15px;
 }
 .modIconText .icon-text-circle i:before {
   margin: 0;
@@ -4002,14 +3984,8 @@ body {
   .contain-to-grid {
     height: auto;
   }
-  .contain-to-grid .title-area a img:hover {    
-    width: 50px;
-  }
-  .top-bar .name h1 {
-  	text-align: left;
-  }
-  .top-bar .name h1:hover {
-  	background-color: #333;
+  .contain-to-grid .title-area img, .contain-to-grid .title-area li img, .contain-to-grid .title-area a img {
+    width: auto;
   }
   .contain-to-grid .top-bar-section li:not(.has-form) a:not(.button) {
     height: 60px;
