--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -717,11 +717,16 @@ hr {
   height: 80px;
 }
 .herofull {
-  padding: 400px 0 80px;
+  padding: 50px 0 500px;
   background-size: cover;
   background-position: 100% 100%;
   background-position: center;
   max-width: 100%;
+}
+.herotext{
+	margin-bottom: 337px;
+	max-width: 700px;
+	color:#333;
 }
 .heroheader{
 	font-size: 2em;
