--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -726,6 +726,8 @@ hr {
 .herotext{
 	margin-bottom: 277px;
 	max-width: 700px;
+	font-family: "tenor sans",Arial,sans-serif;
+	text-transform: uppercase;
 	text-align: center;
 	margin-right: auto;
 	margin-left:auto;
