--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -763,7 +763,8 @@ hr {
   padding: 0;
 }
 
-.parallax {
+.parallax { 
+  padding:250px 0 150px;
 }
 .map{
 	height: 400px;
@@ -4039,6 +4040,9 @@ body {
   margin-bottom: 10px;
 }
 @media only screen and (max-width: 960px) {
+  .parallax { 
+  padding:100px 0 0;
+  }
   .modTeamMember .overlay {
     opacity: 1;
     background-color: rgba(18, 68, 104, 0.5);
